# androidCrypt

./: .gitignore  LICENSE  PRIVACY_POLICY.txt  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/androidcrypt/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/androidcrypt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xts_aes_native.cpp
app/src/main/java/com/androidcrypt/app/: CopyService.kt  MainActivity.kt  VeraCryptDocumentsProvider.kt  VolumeForegroundService.kt
app/src/main/java/com/androidcrypt/crypto/: CryptoUtils.kt  FAT32Reader.kt  FileSystemReader.kt  KeyfileProcessor.kt  NativeCascadeSTA_XTS.kt  NativeCascadeXTS.kt  NativeSerpentXTS.kt  NativeTwofishXTS.kt  PBKDF2.kt  Serpent.kt  Twofish.kt  VolumeContainer.kt  VolumeCreator.kt  VolumeHeader.kt  VolumeMountManager.kt  VolumeReader.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/androidcrypt/: ExampleUnitTest.kt
app/src/test/java/com/androidcrypt/crypto/: CheckInitialTweak.kt  DataUnitTest.kt  DetailedMultiplyDebug.kt  FAT32AdditionalPropertyTests.kt  FAT32ChainIntegrityPropertyTest.kt  FAT32CrashSnapshotPropertyTest.kt  FAT32MountRoundTripPropertyTest.kt  (+23 more)
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 2.txt  3.txt  4.txt
(+4 files in other folders)
